created responsive mobile nav bar that toggles hamburger menu

--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,10 @@ a:hover {
   color: red;
 }
 
+li {
+  list-style-type: none;
+}
+
 p {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -40,7 +44,7 @@ aside {
   background-color: #e4e4e4;
 }
 
-aside .logoImg {
+aside .logo {
   position: absolute;
   top: 0;
   left: 0;
@@ -64,6 +68,35 @@ aside li a {
   text-align: center;
   display: block;
   padding: 20px;
+}
+
+.hamburger {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  bottom: 10px;
+  left: 90vw;
+  display: none;
+}
+
+#hamburgerMenu {
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+}
+
+#hamburgerMenu .fa-bars, #hamburgerMenu .fa-times {
+  position: relative;
+  top: 18px;
+  left: 22px;
+}
+
+#hamburgerMenu .fa-times {
+  display: none;
 }
 
 footer {
@@ -98,8 +131,42 @@ main h1 {
 }
 
 .aboutMe {
-  text-align: center;
   padding: 50px;
+}
+
+.aboutMe p, .aboutMe h1, .aboutMe .goToProjects {
+  text-align: center;
+}
+
+.aboutMe .description {
+  text-align: left;
+}
+
+.aboutMe .goToProjects {
+  margin: 20px 0;
+}
+
+.aboutMe .goToProjects button {
+  margin: 0 auto;
+  padding: 15px 25px;
+}
+
+.mobileNav {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  padding: 40px 20px 40px 40px;
+  background-color: grey;
+  text-align: right;
+}
+
+.mobileNav ul {
+  margin: 30px 0;
+}
+
+.mobileNav li {
+  margin: 5px 0;
 }
 
 .techStack {
@@ -110,13 +177,22 @@ main h1 {
   text-align: center;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 767px) {
   body {
     display: block;
     background-color: red;
   }
   aside {
     display: none;
+  }
+  aside .logo {
+    display: block;
+  }
+  .hamburger {
+    display: block;
+  }
+  .mobileNav.show {
+    display: block;
   }
 }
 /*# sourceMappingURL=index.css.map */
