--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,6 +19,10 @@ a{
     }
 }
 
+li{
+    list-style-type: none;
+}
+
 p{
     font-family: $pFonts;
     font-weight: 400;
@@ -41,7 +45,7 @@ aside{
     height:100vh;
     background-color: #e4e4e4;
 
-    .logoImg{
+    .logo{
         position: absolute;
         top:0;
         left:0;
@@ -62,6 +66,36 @@ aside{
             display: block;
             padding: 20px;
         }
+    }
+}
+
+.hamburger{
+    width:60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #000;
+    position: absolute;
+    bottom:10px;
+    left: 90vw;
+    display: none;
+}
+
+
+#hamburgerMenu{
+    background-color: transparent;
+    cursor:pointer;
+    border:0;
+    color:#fff;
+    font-size: 20px;
+    
+    .fa-bars, .fa-times{
+        position: relative;
+        top:18px;
+        left: 22px;
+    }
+
+    .fa-times{
+        display: none;
     }
 }
 
@@ -90,8 +124,47 @@ main{
 }
 
 .aboutMe{
-    text-align: center;
+
     padding: 50px;
+
+    p, h1, .goToProjects{
+        text-align: center;
+    }
+
+    .description{
+        text-align: left;
+    }
+
+    .goToProjects{
+        margin:20px 0;
+
+        button{
+            margin:0 auto;
+            padding: 15px 25px;
+        }
+    }
+}
+
+.mobileNav{
+    display: none;
+    position: fixed;
+    bottom:0;
+    right:0;
+
+    padding:40px 20px 40px 40px;
+    // border-radius: 50%;
+    // width:100%;
+    // height:100vh;
+    background-color: grey;
+    text-align: right;
+    
+    ul{
+        margin: 30px 0;
+    }
+
+    li{
+        margin:5px 0;
+    }
 }
 
 .techStack{
@@ -100,13 +173,37 @@ main{
     text-align: center;
 }
 
-@media (max-width:1100px) {
+@media (max-width:767px) {
     body{
         display: block;
         background-color:red;
     }
 
     aside{
+        .logo{
+            display: block;
+        }
+
         display: none;
     }
+
+    .hamburger{
+        display: block;
+    }
+
+    .mobileNav.show{
+        display: block;
+    }
 }
+
+//mobile
+// @media (max-width:767px) {
+//     body{
+//         display: block;
+//         background-color:red;
+//     }
+
+//     aside{
+//         display: none;
+//     }
+// }
