updated read me

--- a/styles/index.css
+++ b/styles/index.css
@@ -194,5 +194,9 @@ main h1 {
   .mobileNav.show {
     display: block;
   }
+  .techStack {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
 }
 /*# sourceMappingURL=index.css.map */
