Fixed hambuger menu position

--- a/styles/index.css
+++ b/styles/index.css
@@ -75,9 +75,9 @@ aside li a {
   height: 60px;
   border-radius: 50%;
   background-color: #000;
-  position: absolute;
+  position: fixed;
   bottom: 10px;
-  left: 90vw;
+  left: 83vw;
   display: none;
 }
 
