--- a/styles/index.scss
+++ b/styles/index.scss
@@ -74,9 +74,9 @@ aside{
     height: 60px;
     border-radius: 50%;
     background-color: #000;
-    position: absolute;
+    position: fixed;
     bottom:10px;
-    left: 90vw;
+    left: 83vw;
     display: none;
 }
 
