--- a/styles/index.css
+++ b/styles/index.css
@@ -38,16 +38,16 @@ body {
       grid-template-areas: 'nav about';
 }
 
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 aside {
   width: 300px;
   height: 100vh;
   background-color: #e4e4e4;
-}
-
-aside .logo {
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 aside nav {
@@ -68,6 +68,7 @@ aside li a {
   text-align: center;
   display: block;
   padding: 20px;
+  text-transform: uppercase;
 }
 
 .hamburger {
@@ -131,7 +132,7 @@ main h1 {
 }
 
 .aboutMe {
-  padding: 50px;
+  padding: 50px 0;
 }
 
 .aboutMe p, .aboutMe h1, .aboutMe .goToProjects {
@@ -156,8 +157,9 @@ main h1 {
   position: fixed;
   bottom: 0;
   right: 0;
-  padding: 40px 20px 40px 40px;
-  background-color: grey;
+  padding: 40px 20px 40px 100px;
+  border-top-left-radius: 1000%;
+  background-color: #000;
   text-align: right;
 }
 
@@ -169,6 +171,10 @@ main h1 {
   margin: 5px 0;
 }
 
+.mobileNav a {
+  color: #fff;
+}
+
 .techStack {
   display: -ms-grid;
   display: grid;
@@ -177,16 +183,33 @@ main h1 {
   text-align: center;
 }
 
-@media (max-width: 767px) {
+.fa-js {
+  color: #FCD600;
+}
+
+.fa-sass {
+  color: #C03F80;
+}
+
+.fa-react {
+  color: #62DAFB;
+}
+
+.fa-node {
+  color: #5D9855;
+}
+
+@media (max-width: 768px) {
   body {
     display: block;
     background-color: red;
+    padding: 30px;
   }
   aside {
     display: none;
   }
-  aside .logo {
-    display: block;
+  main {
+    padding: 0;
   }
   .hamburger {
     display: block;
@@ -197,6 +220,7 @@ main h1 {
   .techStack {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 20px;
   }
 }
 /*# sourceMappingURL=index.css.map */
