--- a/styles/index.scss
+++ b/styles/index.scss
@@ -40,16 +40,18 @@ body{
     // grid-gap:10px;
 }
 
+.logo{
+    position: absolute;
+    top:0;
+    left:0;
+}
+
 aside{
     width: 300px;
     height:100vh;
     background-color: #e4e4e4;
 
-    .logo{
-        position: absolute;
-        top:0;
-        left:0;
-    }
+
 
     nav{
         height:80vh;
@@ -65,6 +67,7 @@ aside{
             text-align: center;
             display: block;
             padding: 20px;
+            text-transform: uppercase;
         }
     }
 }
@@ -125,11 +128,15 @@ main{
 
 .aboutMe{
 
-    padding: 50px;
+    padding:50px 0;
 
     p, h1, .goToProjects{
         text-align: center;
     }
+
+    // h1{
+    //     font-size: clamp(1em,  2.5vw, 2rem);
+    // }
 
     .description{
         text-align: left;
@@ -151,12 +158,12 @@ main{
     bottom:0;
     right:0;
 
-    padding:40px 20px 40px 40px;
-    // border-radius: 50%;
-    // width:100%;
-    // height:100vh;
-    background-color: grey;
+    padding:40px 20px 40px 100px;
+    border-top-left-radius: 1000%;
+    background-color: #000;
     text-align: right;
+
+
     
     ul{
         margin: 30px 0;
@@ -164,6 +171,10 @@ main{
 
     li{
         margin:5px 0;
+    }
+
+    a{
+        color:#fff;
     }
 }
 
@@ -173,18 +184,37 @@ main{
     text-align: center;
 }
 
-@media (max-width:767px) {
+.fa-js{
+    color:#FCD600;
+}
+
+.fa-sass{
+    color:#C03F80;
+}
+
+.fa-react{
+    color:#62DAFB;
+}
+
+.fa-node{
+    color:#5D9855;
+}
+
+
+
+@media (max-width:768px) {
     body{
         display: block;
         background-color:red;
+        padding:30px;
     }
 
     aside{
-        .logo{
-            display: block;
-        }
-
         display: none;
+    }
+
+    main{
+        padding:0;
     }
 
     .hamburger{
@@ -197,6 +227,7 @@ main{
 
     .techStack{
         grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 20px;
     }
 }
 
