--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@ li {
   list-style-type: none;
 }
 
-p {
+p, li {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
@@ -30,24 +30,21 @@ h1, h2, h3, h4, a {
   font-weight: 700;
 }
 
-body {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 4fr;
-      grid-template-columns: 1fr 4fr;
-      grid-template-areas: 'nav about';
-}
-
-.logo {
+.logoImg {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1000;
 }
 
 aside {
   width: clamp(100px, 25vw, 300px);
-  height: 100vh;
+  height: clamp(100%, 100vh, 100vh);
   background-color: #e4e4e4;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 aside nav {
@@ -120,10 +117,8 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   padding: 30px;
+  margin-left: 25vw;
 }
 
 main h1 {
@@ -149,7 +144,7 @@ main h1 {
   margin: 20px 0;
 }
 
-.aboutMe .goToProjects h3 {
+.aboutMe .goToProjects h2 {
   margin: 20px;
 }
 
@@ -226,6 +221,7 @@ main h1 {
   }
   main {
     padding: 0;
+    margin-left: 0;
   }
   .aboutMe .description {
     width: 100%;
