--- a/styles/projects.css
+++ b/styles/projects.css
@@ -28,7 +28,27 @@ main .prjTitle {
 
 main img {
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
   height: auto;
+}
+
+main ol.prjTags {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: clamp(0.5em, 0.8vw, 1em);
+}
+
+main ol.prjTags li {
+  display: inline;
+  border: 1px solid #D84A24;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
 }
 /*# sourceMappingURL=projects.css.map */
