--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -22,7 +22,25 @@ main{
 
     img{
         width: 100%;
-        max-width: 300px;
+        max-width: 400px;
         height:auto;
+    }
+
+    ol.prjTags{
+        padding:10px;
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+        font-size: clamp(0.5em, 0.8vw, 1em);
+        // font-size: 0.5em;
+
+        li{
+            display: inline;
+            border:1px solid #D84A24;
+            padding:5px 10px;
+            border-radius:5px;
+            font-weight: bold;
+        }
     }
 }
