Improved styles on home page

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,14 +31,18 @@ h1, h2, h3, h4, a {
 }
 
 .logoImg {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  top: 20px;
+  left: 5vw;
   z-index: 1000;
 }
 
+body {
+  background-color: #EFF2F5;
+}
+
 aside {
-  width: clamp(100px, 25vw, 300px);
+  width: clamp(100px, 23vw, 300px);
   height: clamp(100%, 100vh, 100vh);
   background-color: #e4e4e4;
   position: fixed;
@@ -117,8 +121,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: auto;
   padding: 30px;
-  margin-left: 25vw;
+  margin-left: 23vw;
 }
 
 main h1 {
@@ -127,10 +132,14 @@ main h1 {
 }
 
 .aboutMe {
-  padding: 50px 0;
+  background-color: steelblue;
+  padding: 50px 20px;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 5px 10px #000;
+          box-shadow: 1px 5px 10px #000;
 }
 
-.aboutMe p, .aboutMe h1, .aboutMe .goToProjects {
+.aboutMe h1, .aboutMe .goToProjects {
   text-align: center;
 }
 
@@ -161,6 +170,11 @@ main h1 {
 .aboutMe .goToProjects button:hover {
   background-color: steelblue;
   color: #fff;
+}
+
+.techSkills {
+  margin: 20px 0;
+  padding: 30px 20px;
 }
 
 .mobileNav {
@@ -194,6 +208,20 @@ main h1 {
   text-align: center;
 }
 
+.techStack .skillContainer {
+  background-color: steelblue;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  color: #e4e4e4;
+  -webkit-box-shadow: 2px 2px 5px #000;
+          box-shadow: 2px 2px 5px #000;
+}
+
+.techStack .skillContainer i {
+  width: 100px;
+}
+
 .fa-js {
   color: #FCD600;
 }
@@ -210,11 +238,29 @@ main h1 {
   color: #5D9855;
 }
 
+.fa-git-alt {
+  color: #E44C31;
+}
+
+@media (max-width: 968px) {
+  .logoImg {
+    left: 3vw;
+    font-size: .8em;
+  }
+  .techStack {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 20px;
+  }
+}
+
 @media (max-width: 768px) {
   body {
     display: block;
-    background-color: steelblue;
     padding: 30px;
+  }
+  .logoImg {
+    position: absolute;
   }
   aside {
     display: none;
@@ -222,6 +268,9 @@ main h1 {
   main {
     padding: 0;
     margin-left: 0;
+  }
+  .aboutMe {
+    margin-top: 30px;
   }
   .aboutMe .description {
     width: 100%;
@@ -233,6 +282,9 @@ main h1 {
   }
   .mobileNav.show {
     display: block;
+  }
+  .mobileNav .socials a {
+    margin: 0 5px;
   }
   #hamburgerMenu .fa-times.show {
     display: block;
