--- a/styles/index.scss
+++ b/styles/index.scss
@@ -34,14 +34,18 @@ h1, h2, h3, h4, a{
 }
 
 .logoImg{
-    position: absolute;
-    top:0;
-    left:0;
+    position: fixed;
+    top:20px;
+    left:5vw;
     z-index: 1000;
 }
 
+body{
+    background-color: #EFF2F5;
+}
+
 aside{
-    width: clamp(100px, 25vw, 300px);
+    width: clamp(100px, 23vw, 300px);
     height: clamp(100%, 100vh, 100vh);
     background-color: #e4e4e4;
     position: fixed;
@@ -113,9 +117,9 @@ footer{
 main{
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
+    height:auto;
     padding:30px;
-    margin-left:25vw;
+    margin-left:23vw;
 
     h1{
         text-align: center;
@@ -124,10 +128,12 @@ main{
 }
 
 .aboutMe{
+    background-color: steelblue;
+    padding:50px 20px;
+    border-radius: 5px;
+    box-shadow: 1px 5px 10px #000;
 
-    padding:50px 0;
-
-    p, h1, .goToProjects{
+    h1, .goToProjects{
         text-align: center;
     }
 
@@ -157,6 +163,11 @@ main{
             }
         }
     }
+}
+
+.techSkills{
+    margin:20px 0;
+    padding:30px 20px;
 }
 
 .mobileNav{
@@ -189,6 +200,19 @@ main{
     display:grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
+
+    .skillContainer{
+        background-color:steelblue;
+        padding:10px ;
+        margin: 10px;
+        border-radius:5px;
+        color:#e4e4e4;
+        box-shadow: 2px 2px 5px #000;
+
+        i{
+            width: 100px;
+        }
+    }
 }
 
 .fa-js{
@@ -207,13 +231,32 @@ main{
     color:#5D9855;
 }
 
+.fa-git-alt{
+    color:#E44C31;
+}
+
+
+@media (max-width:968px){
+    .logoImg{
+        left:3vw;
+        font-size: .8em;
+    }
+
+    .techStack{
+        grid-template-columns: repeat(3, 1fr);
+        grid-row-gap: 20px;
+    }
+}
 
 
 @media (max-width:768px) {
     body{
         display: block;
-        background-color:steelblue;
         padding:30px;
+    }
+
+    .logoImg{
+        position: absolute;
     }
 
     aside{
@@ -226,6 +269,8 @@ main{
     }
 
     .aboutMe{
+        margin-top:30px;
+
         .description{
             width: 100%;
             text-align: left;
@@ -241,6 +286,14 @@ main{
         display: block;
     }
 
+    .mobileNav{
+        .socials{
+            a{
+                margin:0 5px;
+            }
+        }
+    }
+
     #hamburgerMenu{
         .fa-times.show{
             display: block;
@@ -251,8 +304,6 @@ main{
         }
     }
 
-
-
     .techStack{
         grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 20px;
@@ -262,14 +313,3 @@ main{
 .hide{
     display: none;
 }
-//mobile
-// @media (max-width:767px) {
-//     body{
-//         display: block;
-//         background-color:red;
-//     }
-
-//     aside{
-//         display: none;
-//     }
-// }
