--- a/styles/index.css
+++ b/styles/index.css
@@ -139,8 +139,12 @@ main h1 {
           box-shadow: 1px 5px 10px #000;
 }
 
-.aboutMe h1, .aboutMe .goToProjects {
+.aboutMe h1 {
   text-align: center;
+}
+
+.aboutMe h3 {
+  margin: 10px 0;
 }
 
 .aboutMe .description {
@@ -159,8 +163,8 @@ main h1 {
 
 .aboutMe .goToProjects button {
   margin: 0 auto;
-  padding: 15px 25px;
-  border: 1px solid steelblue;
+  padding: 10px 15px;
+  border: 1px solid #fff;
   border-radius: 10px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -170,11 +174,6 @@ main h1 {
 .aboutMe .goToProjects button:hover {
   background-color: steelblue;
   color: #fff;
-}
-
-.techSkills {
-  margin: 20px 0;
-  padding: 30px 20px;
 }
 
 .mobileNav {
@@ -200,22 +199,42 @@ main h1 {
   color: #fff;
 }
 
+.mobileNav a:hover {
+  color: red;
+}
+
+.techSkills {
+  margin: 20px 0;
+  padding: 30px 0;
+}
+
+.techSkills h2 {
+  padding: 20px 0;
+}
+
 .techStack {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
   text-align: center;
 }
 
 .techStack .skillContainer {
   background-color: steelblue;
   padding: 10px;
-  margin: 10px;
   border-radius: 5px;
   color: #e4e4e4;
   -webkit-box-shadow: 2px 2px 5px #000;
           box-shadow: 2px 2px 5px #000;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.techStack .skillContainer:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .techStack .skillContainer i {
