--- a/styles/projects.css
+++ b/styles/projects.css
@@ -7,9 +7,10 @@ main {
 main .projectsContainer {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-gap: 30px 10px;
+  width: 100%;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px 20px;
   justify-items: center;
 }
 
@@ -19,6 +20,16 @@ main .prjCard {
   -webkit-box-shadow: 1px 1px 1px #000;
           box-shadow: 1px 1px 1px #000;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 main .prjTitle {
@@ -28,8 +39,8 @@ main .prjTitle {
 
 main img {
   width: 100%;
-  max-width: 400px;
-  height: auto;
+  max-width: 100%;
+  height: 100%;
 }
 
 main ol.prjTags {
@@ -50,5 +61,28 @@ main ol.prjTags li {
   padding: 5px 10px;
   border-radius: 5px;
   font-weight: bold;
+}
+
+@media (max-width: 1200px) {
+  main {
+    padding: 30px 70px;
+  }
+  main .projectsContainer {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 30px 10px;
+  }
+  main h1 {
+    margin: 30px 0 0 0;
+  }
+  main .projectsContainer {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 /*# sourceMappingURL=projects.css.map */
