--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -3,8 +3,9 @@ main{
 
     .projectsContainer{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap:30px 10px;
+        width: 100%;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap:30px 20px;
         justify-items: center;
     }
 
@@ -13,6 +14,9 @@ main{
         border-radius: 5px;
         box-shadow: 1px 1px 1px #000;
         padding:10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .prjTitle{
@@ -22,8 +26,8 @@ main{
 
     img{
         width: 100%;
-        max-width: 400px;
-        height:auto;
+        max-width: 100%;
+        height:100%;
     }
 
     ol.prjTags{
@@ -44,3 +48,31 @@ main{
         }
     }
 }
+
+@media (max-width:1200px){
+    main{
+        padding: 30px 70px;
+
+        .projectsContainer{
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+}
+
+@media (max-width:768px) {
+    body{
+        padding:30px 10px;
+    }
+    
+    main{
+        // padding:30px;
+        h1{
+            margin:30px 0 0 0;
+        }
+
+        .projectsContainer{
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+}
+
