--- a/styles/projects.css
+++ b/styles/projects.css
@@ -43,30 +43,28 @@ main img {
   height: 100%;
 }
 
-main ol.prjTags {
+main ol.prjTags, main ul.prjLinks {
   padding: 10px;
   width: 100%;
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+main ul.prjLinks {
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  font-size: clamp(0.5em, 0.8vw, 1em);
 }
 
 main ol.prjTags li {
   display: inline;
-  border: 1px solid #D84A24;
-  padding: 5px 10px;
+  padding: 5px 5px 0 0;
   border-radius: 5px;
   font-weight: bold;
+  font-size: 0.8em;
 }
 
 @media (max-width: 1200px) {
-  main {
-    padding: 30px 70px;
-  }
   main .projectsContainer {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
@@ -74,15 +72,16 @@ main ol.prjTags li {
 }
 
 @media (max-width: 768px) {
-  body {
-    padding: 30px 10px;
-  }
   main h1 {
     margin: 30px 0 0 0;
   }
   main .projectsContainer {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  main .projectsContainer .prjCard {
+    max-width: 550px;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=projects.css.map */
