--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,9 @@
+/*
+    Primary
+    Secondary
+    Background
+    Accent
+*/
 * {
   margin: 0;
   padding: 0;
@@ -10,10 +16,11 @@ a {
   text-decoration: none;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  color: #BBCDE5;
 }
 
 a:hover {
-  color: red;
+  color: #BE7C4D;
 }
 
 li {
@@ -30,6 +37,10 @@ h1, h2, h3, h4, a {
   font-weight: 700;
 }
 
+h1, h2, h3 {
+  color: #fff;
+}
+
 .logoImg {
   position: fixed;
   top: 20px;
@@ -38,13 +49,13 @@ h1, h2, h3, h4, a {
 }
 
 body {
-  background-color: #EFF2F5;
+  background-color: #222;
 }
 
 aside {
   width: clamp(100px, 23vw, 300px);
   height: clamp(100%, 100vh, 100vh);
-  background-color: #e4e4e4;
+  background-color: #1C5D99;
   position: fixed;
   top: 0;
   left: 0;
@@ -76,7 +87,7 @@ aside li a {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #000;
+  background-color: #BE7C4D;
   position: fixed;
   bottom: 10px;
   left: 83vw;
@@ -132,11 +143,11 @@ main h1 {
 }
 
 .aboutMe {
-  background-color: steelblue;
+  background-color: #1C5D99;
   padding: 50px 20px;
   border-radius: 5px;
-  -webkit-box-shadow: 1px 5px 10px #000;
-          box-shadow: 1px 5px 10px #000;
+  -webkit-box-shadow: 1px 3px 10px #000;
+          box-shadow: 1px 3px 10px #000;
 }
 
 .aboutMe h1 {
@@ -168,11 +179,12 @@ main h1 {
   border-radius: 10px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  background-color: #BBCDE5;
   cursor: pointer;
 }
 
 .aboutMe .goToProjects button:hover {
-  background-color: steelblue;
+  background-color: #BE7C4D;
   color: #fff;
 }
 
@@ -183,7 +195,7 @@ main h1 {
   right: 0;
   padding: 40px 20px 40px 100px;
   border-top-left-radius: 1000%;
-  background-color: #000;
+  background-color: #BE7C4D;
   text-align: right;
 }
 
@@ -200,7 +212,7 @@ main h1 {
 }
 
 .mobileNav a:hover {
-  color: red;
+  color: #BBCDE5;
 }
 
 .techSkills {
@@ -222,10 +234,10 @@ main h1 {
 }
 
 .techStack .skillContainer {
-  background-color: steelblue;
+  background-color: #1C5D99;
   padding: 10px;
   border-radius: 5px;
-  color: #e4e4e4;
+  color: #fff;
   -webkit-box-shadow: 2px 2px 5px #000;
           box-shadow: 2px 2px 5px #000;
   -webkit-transition: all 0.3s;
