--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,7 +15,7 @@ main .projectsContainer {
 }
 
 main .prjCard {
-  background-color: #e4e4e4;
+  background-color: #1C5D99;
   border-radius: 5px;
   -webkit-box-shadow: 1px 1px 1px #000;
           box-shadow: 1px 1px 1px #000;
@@ -33,6 +33,7 @@ main .prjCard {
 }
 
 main .prjTitle {
+  text-align: center;
   margin: 10px 0;
   padding: 10px 0;
 }
@@ -62,6 +63,7 @@ main ol.prjTags li {
   border-radius: 5px;
   font-weight: bold;
   font-size: 0.8em;
+  color: #BE7C4D;
 }
 
 @media (max-width: 1200px) {
